--- a/css/style.css
+++ b/css/style.css
@@ -289,10 +289,14 @@ body {
   .footer-content {
     flex-direction: column;
     align-items: flex-start;
+    margin-left: 0;
   }
   .copyright {
     display: block;
     margin-bottom: 8px;
+  }
+  .footer-link {
+    margin-left: 17px;
   }
   .footer-link:first-child {
     margin-left: 0px;
@@ -425,8 +429,5 @@ body {
     max-width: 225px;
     margin-left: 0px;
   }
-  .footer {
-    height: 109px;
-   
-  }
+  
 }
